Return sequenced collections where possible